versioned_docs/version-1.5/dankgreeter/installation.mdx
---
title: Installation
description: Install DankGreeter display manager
sidebar_position: 2
---

import Hero from '@site/src/components/Hero';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<Hero
  asciiArt={`██████╗  █████╗ ███╗   ██╗██╗  ██╗ ██████╗ ██████╗ ███████╗███████╗████████╗
██╔══██╗██╔══██╗████╗  ██║██║ ██╔╝██╔════╝ ██╔══██╗██╔════╝██╔════╝╚══██╔══╝
██║  ██║███████║██╔██╗ ██║█████╔╝ ██║  ███╗██████╔╝█████╗  █████╗     ██║
██║  ██║██╔══██║██║╚██╗██║██╔═██╗ ██║   ██║██╔══██╗██╔══╝  ██╔══╝     ██║
██████╔╝██║  ██║██║ ╚████║██║  ██╗╚██████╔╝██║  ██║███████╗███████╗   ██║
╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚══════╝╚══════╝   ╚═╝
                                                                            `}
/>

# Installation

## Installation Methods

:::note[Already have the DankLinux repository?]

If DMS or another DankLinux package is already installed, the repository is already configured. The simplest option is:

```bash
dms greeter install
```

This installs the package and handles all configuration automatically.

> ⚠️ **[This replaces your current display manager.](#dankinstall-users)**

:::

## Distro Installation

### Arch & Derivatives

DankGreeter is available in the AUR as a prebuilt binary package or a source (`-git`) package.

<Tabs groupId="greeter-channel">
<TabItem value="bin" label="Prebuilt Binary" default>

```bash
paru -S greetd-dms-greeter-bin
```

`greetd-dms-greeter-bin` installs a prebuilt binary from the latest tagged release, so there is nothing to compile. This is the fastest way to install and the recommended option for most users.

</TabItem>
<TabItem value="git" label="Latest Development Build">

```bash
paru -S greetd-dms-greeter-git
```

`greetd-dms-greeter-git` builds from the tip of the `master` branch. Use it if you want the newest changes before they are tagged, at the cost of a local compile and possible instability.

</TabItem>
</Tabs>

Both packages ship the `dms-greeter` wrapper along with the `/usr/lib/sysusers.d/dms-greeter.conf` and `/usr/lib/tmpfiles.d/dms-greeter.conf` declarations described in [Greeter system user](#greeter-system-user-rpm-deb-and-immutable-systems). After installing, either run `dms greeter install` (see the note at the top) or continue with [Completing Setup](#completing-setup).

### Fedora & CentOS

```bash
sudo dnf copr enable avengemedia/danklinux
sudo dnf install dms-greeter
```

The `dms-greeter` RPM installs `/usr/lib/sysusers.d/dms-greeter.conf` so the `greeter` user is recreated from `/usr` on every boot. That matters on **Fedora Atomic**, Universal Blue, bootc, and other ostree systems where install-time `useradd` in `/etc/passwd` may not persist.

### Debian & Ubuntu

#### Debian

Packages are published on OBS for **Debian 13 (Trixie)**, **Debian Testing**, and **Debian Sid**.

Select your release:

<Tabs groupId="debian-release">
<TabItem value="trixie" label="Debian 13 (Trixie)" default>

```bash
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_13/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_13/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install dms-greeter
```

</TabItem>
<TabItem value="testing" label="Debian Testing">

```bash
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Testing/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Testing/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install dms-greeter
```

</TabItem>
<TabItem value="sid" label="Debian Sid">

```bash
curl -fsSL https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/Debian_Unstable/Release.key | \
  sudo gpg --dearmor -o /etc/apt/keyrings/danklinux.gpg
echo "deb [signed-by=/etc/apt/keyrings/danklinux.gpg] https://download.opensuse.org/repositories/home:/AvengeMedia:/danklinux/Debian_Unstable/ /" | \
  sudo tee /etc/apt/sources.list.d/danklinux.list
sudo apt update
sudo apt install dms-greeter
```

</TabItem>
</Tabs>

#### Ubuntu

Ubuntu 26.04 LTS+ (Resolute Raccoon) is supported via Launchpad PPA.

```bash
sudo add-apt-repository ppa:avengemedia/danklinux
sudo apt update
sudo apt install dms-greeter
```

### openSUSE & Derivatives

DankGreeter is available through the Open Build Service (OBS) for OpenSUSE Tumbleweed, Leap 16/16.1, and Slowroll.

Select your distribution:

<Tabs groupId="opensuse-distro">
<TabItem value="tumbleweed" label="Tumbleweed" default>

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Tumbleweed/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install dms-greeter
```

</TabItem>
<TabItem value="leap16" label="Leap 16">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.0/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install dms-greeter
```

</TabItem>
<TabItem value="leap161" label="Leap 16.1">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/16.1/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install dms-greeter
```

</TabItem>
<TabItem value="slowroll" label="Slowroll">

```bash
sudo zypper addrepo https://download.opensuse.org/repositories/home:AvengeMedia:danklinux/openSUSE_Slowroll/home:AvengeMedia:danklinux.repo
sudo zypper refresh
sudo zypper install dms-greeter
```

</TabItem>
</Tabs>

### Void Linux

:::note

Install DankGreeter from our R2-backed DMS XBPS repository or build it from source.

:::

:::warning[Repository migration]

Replace the old URL in your existing repository file:

```bash
sudo sed -i 's|https://avengemedia.github.io/DankMaterialShell/current|https://void.danklinux.com/dms/current|' /etc/xbps.d/dms.conf
```

The frozen GitHub Pages repository no longer receives updates and will be
retired after **July 24, 2026 at 22:27 UTC**.

:::

<Tabs groupId="void-install-method">
<TabItem value="repo" label="DMS Repository" default>

```bash
echo "repository=https://void.danklinux.com/dms/current" | sudo tee /etc/xbps.d/dms.conf
sudo xbps-install -Su
sudo xbps-install -S dms-greeter
```

:::note

On the first sync, `xbps-install` will output our signing key fingerprint and ask you to type `y` to trust and import it. Verify that the key matches our official signing fingerprint.

:::

</TabItem>
<TabItem value="source" label="Build from Source">

If you prefer to build from source using `xbps-src`:

```bash
# Set up the Void packages tree (one time)
git clone --depth 1 https://github.com/void-linux/void-packages.git
cd void-packages
./xbps-src binary-bootstrap

# Copy in the templates (adjust paths as needed)
cp -R ../DankMaterialShell/distro/void/srcpkgs/dms-greeter srcpkgs/

# Build the package
./xbps-src pkg dms-greeter

# Install the results
sudo xbps-install --repository=hostdir/binpkgs dms-greeter
```

</TabItem>
</Tabs>

After installation, proceed to [Completing Setup](#completing-setup) below.

## Greeter system user (RPM, DEB, and immutable systems)

Official `dms-greeter` packages (Arch AUR, Fedora, Debian, Ubuntu, openSUSE) ship two systemd declarations under `/usr`:

| File | Purpose |
|------|---------|
| `/usr/lib/sysusers.d/dms-greeter.conf` | Declares the `greeter` UNIX account (home `/var/lib/greeter`, shell `/bin/bash`) |
| `/usr/lib/tmpfiles.d/dms-greeter.conf` | Creates `/var/cache/dms-greeter` and `/var/lib/greeter` with `greeter:greeter` ownership |

`systemd-sysusers` applies the user definition at boot and on package install. Package scriptlets (`useradd` / `adduser`) remain as a fallback on traditional mutable systems.

### Immutable and image-based systems

On Fedora Atomic, Universal Blue, bootc, [Zirconium](https://github.com/zirconium-dev/zirconium/), and similar systems:

- Install **`dms-greeter` from your distro repo** (layered package or image build). Do **not** rely on `dms greeter install`, `dms greeter enable`, or `dms greeter uninstall` — those commands are disabled on immutable systems by DMS CLI policy.
- After installing or upgrading `dms-greeter`, **reboot once** if `getent passwd greeter` is empty (sysusers runs early in boot).
- Configure `/etc/greetd/config.toml`, enable `greetd`, and set up theme sync using your distro or image documentation. `dms greeter sync` may still work for theme files if not blocked by your image policy.

Verify the account:

```bash
getent passwd greeter
getent group greeter
ls -l /usr/lib/sysusers.d/dms-greeter.conf
systemd-sysusers --dry-run | grep greeter
```

If you previously added a manual `/usr/lib/sysusers.d/dms-greeter.conf` workaround (for example on Zirconium before upstream packaging), you can remove it once `dms-greeter` from DankLinux includes the same file.

### Gentoo

:::note

DMS must already be installed on your system before running this command. The greeter wrapper is sourced from your local DMS installation.

:::

```bash
dms greeter install
```

This will automatically install `greetd` via Portage, copy the greeter wrapper from your local DMS installation, configure permissions, and set up greetd to use DMS. To start the greeter immediately without rebooting, run `sudo systemctl start greetd`.

### NixOS

:::tip

NixOS has dedicated documentation with two installation methods:
- [Native nixpkgs installation](./nixos) - **Recommended** for NixOS 26.05+
- [Flake-based installation](./nixos-flake) - Use for quicker updates

:::

### Void Linux

Install the `dms-greeter` package (see the [DMS installation guide](../dankmaterialshell/installation#void-linux) to configure the repository), then install and enable it:

```bash
sudo xbps-install -S dms-greeter
dms greeter enable
dms greeter sync     # optional: share theming with the shell
```


On Void, `dms greeter enable` sets up everything logind provides automatically on systemd distros: it enables the `dbus` and `elogind` services, configures greetd for elogind (`LIBSEAT_BACKEND=logind`), rewrites `/etc/sv/greetd/run` to wait for those services at boot, adds the `_greeter` user to the `video`/`input` groups, and adds `pam_rundir` to `/etc/pam.d/greetd` so the post-login session gets an `XDG_RUNTIME_DIR`. If `seatd` is enabled it is disabled, elogind manages the seat instead.

On runit, enabling greetd starts it within a few seconds, no separate start command is needed. greetd package updates restore the stock run script, re-run `dms greeter enable` afterwards.

A Wayland compositor (`niri`, `hyprland`, `sway`, …) is required and is not pulled in automatically.

## Installer & Manual Installation

### DankInstall Users
(Niri and Hyprland users only)

`dms-greeter` is an **opt-in** component in the DankInstaller. It can be toggled on during the installation process, but is skipped by default to ensure users consciously choose to enable it (since it replaces your current display manager).


If you enable `dms-greeter` in DankInstall, the full greeter setup (permissions, ACLs, greetd configuration, service enablement) runs automatically at the end of the install process. No further steps are required.

If you skipped it during dankinstall and want to add it later, install the package for your distro (see the sections above) and then proceed to [Completing Setup](#completing-setup).

:::warning

Enabling `dms-greeter` will replace your current display manager.

:::

### Manual installation (DMS already installed)

If you already have DMS installed but need to set up the greeter manually, install `greetd` and then the greeter wrapper:

```bash
sudo wget https://raw.githubusercontent.com/AvengeMedia/DankMaterialShell/refs/heads/master/quickshell/Modules/Greetd/assets/dms-greeter -O /usr/local/bin/dms-greeter
sudo chmod +x /usr/local/bin/dms-greeter
```

Then proceed to [Completing Setup](#completing-setup) below, using the following command in `/etc/greetd/config.toml`:

```toml
command = "dms-greeter --command niri -p /usr/share/quickshell/dms"
```

### Manual installation (without DMS)

For non-dankinstall users without DMS, install `greetd`, `quickshell`, and then the greeter:

```bash
sudo mkdir -p /etc/xdg/quickshell
sudo git clone --recurse-submodules https://github.com/AvengeMedia/DankMaterialShell.git /etc/xdg/quickshell/dms-greeter
sudo mkdir /var/cache/dms-greeter
sudo chown greeter:greeter /var/cache/dms-greeter
```

:::note

Some distributions may have different user/group names for the greetd user.

:::

#### Prerequisites for Theme Syncing

ACLs (Access Control Lists) are required to allow the greeter user to traverse your home directory and access configuration files. The `acl` package is installed automatically when you run `dms greeter sync` or `dms greeter install`, so no manual action is needed on supported distributions.

## Completing Setup

### If you used `dms greeter install`

This applies to any distro where you ran `dms greeter install`, including **Arch Linux** (requires paru or yay), **Ubuntu**, **Fedora**, **Debian**, **openSUSE**, and **Gentoo**.

Configuration, permissions, theme syncing, and greetd service enablement are all handled automatically. To start the greeter immediately without rebooting:

```bash
sudo systemctl start greetd
```

You can verify your setup at any time with `dms greeter status`. `dms greeter sync` can be re-run after theme changes.

### If you installed the package manually

This applies to: **Arch Linux**, and any other distro where you installed the package manually using the commands above.

After installing the package, run these two commands to complete setup:

#### 1. Enable the Greeter

```bash
dms greeter enable
```

This will:
- Configure `/etc/greetd/config.toml` with the correct compositor command
- Disable conflicting display managers (gdm, lightdm, sddm)
- Enable and start the greetd service

#### 2. Sync with Your User Theme

```bash
dms greeter sync
```

This will:
- Install `acl` (if not already installed)
- Add your user to the `greeter` group (if needed)
- Set up ACL permissions on parent directories for greeter access
- Configure group permissions on DMS config directories
- Create symlinks to sync settings, wallpapers, and color themes
- Create your per-user cache slot at `/var/cache/dms-greeter/users/<username>/`

:::note

After running `dms greeter sync`, you will need to log out and log back in for group membership changes to take effect.

:::

:::tip[Multi-user systems]

One **main admin** runs `dms greeter sync` once for system setup. Add every other user to the `greeter` group in **Settings → Users** (greeter access toggle), or with `sudo usermod -aG greeter <username>`. Each of those accounts should then run **`dms greeter sync --profile`** after logging out and back in—not full sync. See [Configuration → Multi-user systems](./configuration#multi-user-systems).

:::

:::note

**NixOS users:** The `dms greeter enable` and `dms greeter sync` commands are not available on NixOS. Please follow the manual steps below or see the [NixOS installation guides](./nixos).

:::

### For all users

You can check your greeter configuration at any time:

```bash
dms greeter status
```

This verifies your greeter setup and sync status. See the [Configuration guide](./configuration#checking-sync-status) for detailed information.

For optional fingerprint or security-key login, see [Login authentication](./configuration#login-authentication).

---

### Manual Setup (all distros)

If you prefer to set up the greeter manually, follow these steps:

:::tip

**All users:** You can use `dms greeter enable` to automate this process instead of following the manual steps below.

:::

1. Edit `/etc/greetd/config.toml` and set `command =` to use dms-greeter:
  ```toml
  [terminal]
  vt = 1

  [default_session]
  user = "greeter"
  command = "dms-greeter --command niri"
  ### Uncomment the below line to run the greeter on Hyprland
  # command = "dms-greeter --command Hyprland"
  ### Uncomment to run the greeter on sway
  # command = "dms-greeter --command sway"
  ### Uncomment to run the greeter on Miracle WM
  # command = "dms-greeter --command miracle-wm"
  ```

2. Disable any existing conflicting greeters:

:::warning

Disabling a greeter while logged in under that greeter will log you out and bring you to a non-graphical TTY.

:::

  ```bash
  sudo systemctl disable gdm lightdm sddm
  ```

3. Enable and start the greeter:
  ```bash
  sudo systemctl enable greetd
  sudo systemctl start greetd
  ```

### Manual Setup (Void Linux / runit)

The steps above assume systemd. On Void the greeter user is `_greeter`, the seat is managed by elogind, and greetd needs extra pieces that logind provides for free elsewhere. `dms greeter enable` does all of this for you, this is the manual equivalent:

1. Edit `/etc/greetd/config.toml`:
  ```toml
  [terminal]
  vt = 1

  [default_session]
  user = "_greeter"
  command = "env LIBSEAT_BACKEND=logind DMS_VOID=1 dms-greeter --command niri --cache-dir /var/cache/dms-greeter"
  ```
  Swap `niri` for `hyprland` or `sway` as needed. The `LIBSEAT_BACKEND=logind` prefix is required, without it the greeter compositor tries seatd and hangs.

2. Enable dbus and elogind, and disable seatd if it is enabled (elogind manages the seat):
  ```bash
  sudo ln -sf /etc/sv/dbus /var/service/
  sudo ln -sf /etc/sv/elogind /var/service/
  sudo rm -f /var/service/seatd
  ```

3. Make greetd wait for dbus and elogind at boot. Replace `/etc/sv/greetd/run` with:
  ```sh
  #!/bin/sh
  sv check dbus >/dev/null || exit 1
  sv check elogind >/dev/null || exit 1
  exec greetd
  ```
  Without this, greetd can race elogind on boot and the first session hangs. greetd package updates restore the stock run script, re-apply this (or re-run `dms greeter enable`) afterwards.

4. Add `_greeter` to the video and input groups:
  ```bash
  sudo usermod -aG video,input _greeter
  ```

5. Add pam_rundir to `/etc/pam.d/greetd` so sessions get an `XDG_RUNTIME_DIR`:
  ```
  session    optional    pam_rundir.so
  ```

6. Enable greetd:
  ```bash
  sudo ln -sf /etc/sv/greetd /var/service/
  ```
  runit starts it within a few seconds. If you still land on a tty login, check `sudo sv status greetd dbus elogind`: greetd stuck in a restart loop means dbus or elogind is not running.
